Split LESS file into chunks

--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -1,431 +1,7 @@
-/* Base */
-
-* {
-    box-sizing: border-box;
-}
-
-html {
-    min-height: 100%;
-    position: relative;
-}
-
-body {
-    font-family: Verdana, Geneva, sans-serif;
-    font-size: 75%;
-    line-height: 1.5;
-    margin-bottom: 30px;
-    min-height: 100%;
-}
-
-main {
-}
-
-p {
-    margin: 0;
-    text-align: justify;
-}
-
-a {
-    text-decoration: none;
-}
-
-/* Helpers */
-
-.hidden {
-    display: none;
-}
-
-.centered {
-    float: none !important;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.left {
-    float: left;
-}
-
-.right {
-    float: right;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.text-center {
-    text-align: center;
-}
-
-@media (min-width: 768px) {
-    .flex-container {
-        display: flex;
-        align-items: center;
-    }
-}
-
-/* Main menu */
-
-nav {
-
-    div {
-
-        a, .fern {
-            display: inline-block;
-            font-size: 90%;
-            font-weight: bolder;
-            height: 40px;
-            line-height: 40px;
-            padding: 0 15px;
-            text-transform: uppercase;
-            white-space: nowrap;
-        }
-
-        .fern {
-            float: right;
-            padding-right: 0;
-
-            a {
-                padding-left: 0;
-            }
-
-            img {
-                padding-top: 5px;
-            }
-        }
-    }
-}
-
-/* Context menu */
-
-.context-menu {
-    position: absolute;
-}
-
-/* Footer */
-
-footer {
-    bottom: 0;
-    height: 30px;
-    padding: 6px 0;
-    position: absolute;
-    width: 100%;
-}
-
-/* Input controls */
-
-::-webkit-input-placeholder {
-    color: #dc322f;
-    opacity: 0.5;
-}
-
-::-moz-placeholder {
-    color: #dc322f;
-    opacity: 0.5;
-}
-
-:-moz-placeholder {
-    color: #dc322f;
-    opacity: 0.5;
-}
-
-:-ms-input-placeholder {
-    color: #dc322f;
-    opacity: 0.5;
-}
-
-.highlight,
-.error {
-    padding: 5px 10px;
-    text-align: left;
-
-    .ui-icon-close {
-        cursor: pointer;
-        float: right;
-        margin-left: 10px;
-    }
-}
-
-.dialog {
-    display: none;
-    margin-top: 5px;
-
-    .ui-state-error {
-        margin-top: 5px;
-    }
-}
-
-fieldset {
-    margin: 0;
-    padding: 10px;
-}
-
-@media (min-width: 768px) {
-    .dialog fieldset {
-        min-width: 500px;
-    }
-}
-
-legend {
-    margin: 0 5px;
-    padding: 0 5px;
-}
-
-@media (max-width: 767px) {
-    p.caption {
-        font-weight: bold;
-    }
-}
-
-p.field-error {
-    font-weight: bold;
-}
-
-label {
-    display: inline-block;
-    margin: 5px 0;
-}
-
-label.hint {
-    border-bottom: 1px dotted;
-    cursor: help;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-    padding: 5px 8px;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-    vertical-align: middle;
-}
-
-textarea {
-    padding: 4px 8px;
-    resize: vertical;
-}
-
-select {
-    padding: 4px;
-}
-
-.dropdown {
-    display: inline-block;
-
-    .ui-menu {
-        position: absolute;
-    }
-}
-
-/* Panels */
-
-.panel {
-
-    .panel-heading {
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        padding: 4px 10px;
-
-        > div {
-            font-weight: bold;
-            padding-top: 5px;
-            padding-bottom: 4px;
-        }
-    }
-
-    .panel-body {
-        margin: 0;
-        padding: 0;
-
-        a {
-            display: block;
-            padding: 5px 10px;
-
-            &:hover {
-                background-color: whitesmoke;
-            }
-        }
-
-        .ui-icon {
-            float: left;
-            margin-right: 4px;
-
-            &.ui-icon-none {
-                background-image: none;
-            }
-        }
-
-        .panel-item {
-            display: block;
-            margin-left: 20px;
-        }
-    }
-}
-
-/* Unsemantic */
-
-.grid-row {
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-@media (max-width: 767px) {
-    .mobile-grid-row {
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
-}
-
-/* jQuery UI */
-
-.ui-tabs .ui-tabs-panel {
-    padding: 0;
-}
-
-p.ui-state-highlight,
-p.ui-state-error {
-    padding: 4px 8px;
-    text-align: left;
-}
-
-/* DataTables */
-
-table.dataTable {
-    text-align: left;
-
-    tfoot {
-
-        display: table-row-group;
-
-        td {
-            background-color: inherit;
-            background-image: none;
-            border-top-width: 0;
-            border-right-width: 0;
-            padding: 2px 3px;
-
-            &:last-child {
-                border-right-width: 1px;
-            }
-        }
-
-        input,
-        select {
-            border-radius: 1px;
-            font-weight: normal;
-            width: 100%;
-        }
-
-        input {
-            padding: 2px 6px;
-        }
-
-        select {
-            padding: 1px 2px;
-        }
-    }
-
-    tbody tr {
-        background-color: #fbfbfb;
-    }
-
-    &.row-border {
-        tbody tr td {
-            border-top: none;
-            border-bottom: 1px solid #ddd;
-        }
-    }
-
-    &.cell-border {
-        tbody tr td {
-            border-top: none;
-            border-bottom: 1px solid #ddd;
-            border-left: 1px solid #ddd;
-            border-right: none;
-        }
-
-        tbody tr td:first-child {
-            border-left: 1px solid #ddd;
-        }
-
-        tbody tr td:last-child {
-            border-right: 1px solid #ddd;
-        }
-    }
-
-    &.hover {
-        tbody tr {
-            cursor: pointer;
-        }
-    }
-
-    th {
-        &.sorting {
-            white-space: nowrap;
-        }
-
-        &.sorting_disabled {
-            width: 10px;
-
-            .DataTables_sort_wrapper {
-                padding-right: 0;
-            }
-        }
-    }
-}
-
-.dataTables_wrapper {
-
-    .dataTables_length {
-        select {
-            padding: 1px !important;
-        }
-    }
-
-    th.sorting_disabled {
-        span.DataTables_sort_icon {
-            display: none;
-        }
-    }
-
-    .dataTables_info {
-        padding: 4px 0;
-    }
-
-    .dataTables_paginate .fg-button {
-        border: 1px solid;
-        margin: -2px -1px;
-        padding: 0.5em 1em;
-
-        &:first-child {
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
-        }
-
-        &:last-child {
-            border-top-right-radius: 0;
-            border-bottom-right-radius: 0;
-        }
-
-        &.previous {
-            border-top-left-radius: 4px;
-            border-bottom-left-radius: 4px;
-        }
-
-        &.next {
-            border-top-right-radius: 4px;
-            border-bottom-right-radius: 4px;
-        }
-
-        &.ui-state-disabled {
-            opacity: 1;
-        }
-    }
-}
+@import "etraxis-basic.less";
+@import "etraxis-controls.less";
+@import "etraxis-datatables.less";
+@import "etraxis-helpers.less";
+@import "etraxis-jquery-ui.less";
+@import "etraxis-panel.less";
+@import "etraxis-unsemantic.less";
