--- a/app/Resources/views/admin/projects/tab_details.html.twig
+++ b/app/Resources/views/admin/projects/tab_details.html.twig
@@ -1,4 +1,4 @@
-{% import "macro.html.twig" as macro %}
+{% import 'macro.html.twig' as macro %}
 
 <div class="grid-row">
     <div class="grid-100">
