--- a/app/Resources/public/less/etraxis-panel.less
+++ b/app/Resources/public/less/etraxis-panel.less
@@ -13,11 +13,17 @@
             padding-top: 5px;
             padding-bottom: 4px;
         }
+
+        .ui-icon {
+            cursor: pointer;
+            float: right;
+            margin: 5px 0 4px 4px;
+        }
     }
 
     .panel-body {
         margin: 0;
-        padding: 0;
+        padding: 5px 0;
 
         a {
             display: block;
