--- a/app/Resources/views/admin/projects/index.html.twig
+++ b/app/Resources/views/admin/projects/index.html.twig
@@ -2,32 +2,17 @@
 
 {% block content %}
 
-    <div class="grid-row">
-        <div class="grid-100">
-            <button type="button" id="btn-create">{{ 'button.create'|trans }}</button>
-            <button type="button" id="btn-export">{{ 'button.export'|trans }}</button>
+    <div class="grid-30 mobile-grid-100">
+        <div class="grid-row mobile-grid-row panel" id="projects">
+            <div class="panel-heading">
+                <span class="ui-icon ui-icon-circle-plus" id="btn-new-project" title="{{ 'button.create'|trans }}"></span>
+                <div>{{ 'projects'|trans }}</div>
+            </div>
         </div>
     </div>
 
-    <div class="grid-row">
-        <div class="grid-100">
-            <table id="projects" class="cell-border hover" data-src="{{ path('admin_projects_list') }}">
-                <thead>
-                    <tr>
-                        <th>{{ 'project.name'|trans }}</th>
-                        <th>{{ 'project.start_time'|trans }}</th>
-                        <th>{{ 'description'|trans }}</th>
-                    </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <td><input type="text"></td>
-                        <td><input type="text"></td>
-                        <td><input type="text"></td>
-                    </tr>
-                </tfoot>
-            </table>
-        </div>
+    <div class="grid-70 mobile-grid-100 grid-row mobile-grid-row">
+        <div id="content"></div>
     </div>
 
 {% endblock %}
@@ -36,36 +21,61 @@
 
     <script>
 
+        var $content  = $('#content');
+        var $projects = $('#projects');
+
+        // Loads panel of projects.
+        function loadProjects(onLoad) {
+            $projects.panel('clear');
+            $.getJSON('{{ path('admin_projects_list') }}', function(data) {
+                $(data).each(function(index, item) {
+                    $projects.panel('append', item.id, item.name);
+                });
+                if (typeof onLoad === 'function') {
+                    onLoad();
+                }
+            });
+        }
+
         $(function() {
 
-            // Projects list.
-            var $table = $('#projects').table();
+            loadProjects();
 
-            // Click on a project in the list.
-            $table.on('click', 'tbody tr', function() {
-                window.location.assign('{{ path('admin_projects') }}' + $(this).data('id'));
+            // Project clicked.
+            $projects.on('panel.item.click', function(e, data) {
+                $content.load('{{ path('admin_view_project', {'id': 0}) }}' + data, function() {
+                    $content.initUI();
+                    $projects.panel('select', data);
+                });
             });
 
-            // "Create" button.
-            $('#btn-create').click(function() {
+            // Project edited.
+            $(document).on('admin.project.edited', function(e, data) {
+                loadProjects(function() {
+                    $projects.panel('select', data);
+                });
+            });
+
+            // Project deleted.
+            $(document).on('admin.project.deleted', function() {
+                loadProjects();
+                $content.html(null);
+            });
+
+            // New project.
+            $('#btn-new-project').click(function() {
                 eTraxis.modal({
                     url: '{{ path('admin_dlg_new_project') }}',
                     title: '{{ 'project.new'|trans }}',
                     success: function() {
-                        $table.api().draw(false);
-                        return true;
-                    }
-                });
-            });
-
-            // "Export" button.
-            $('#btn-export').click(function() {
-                eTraxis.modal({
-                    url: '{{ path('dlg_export') }}',
-                    title: '{{ 'button.export'|trans }}',
-                    success: function() {
-                        var params = $('form').serialize() + '&' + $.param($table.api().ajax.params());
-                        window.location.assign('{{ path('admin_projects_csv') }}?' + params);
+                        var name = $('#project_name').val();
+                        loadProjects(function() {
+                            $('.panel-item', $projects).each(function() {
+                                if ($(this).text() == name) {
+                                    $(this).closest('a').click();
+                                }
+                            });
+                        });
                         return true;
                     }
                 });
