Panel jQuery UI widget

--- a/app/Resources/public/less/etraxis-panel.less
+++ b/app/Resources/public/less/etraxis-panel.less
@@ -9,6 +9,7 @@
         padding: 4px 10px;
 
         > div {
+            cursor: pointer;
             font-weight: bold;
             padding-top: 5px;
             padding-bottom: 4px;
