Fix "All Blacks" theme for panels

--- a/app/Resources/public/less/theme-allblacks.less
+++ b/app/Resources/public/less/theme-allblacks.less
@@ -118,3 +118,9 @@ table.dataTable {
         color: #eeeeee !important;
     }
 }
+
+/* Panels */
+
+.panel .panel-body a:hover {
+    background-color: #222;
+}
