Move theme files to separated folder

--- a/app/Resources/public/less/themes/theme-humanity.less
+++ b/app/Resources/public/less/themes/theme-humanity.less
@@ -1,7 +1,7 @@
-@import "etraxis.less";
+@import "../etraxis.less";
 
 body {
-    background-color: #fbfbfb;
+    background-color: #fffcf8;
     color: #212121;
 }
 
@@ -22,7 +22,7 @@ nav {
 }
 
 a {
-    color: #906060;
+    color: #b85700;
 }
 
 /* DataTables */
@@ -36,7 +36,7 @@ table.dataTable {
         }
 
         &.blue {
-            color: #906060;
+            color: #cb842e;
         }
 
         &.gray {
@@ -60,7 +60,7 @@ table.dataTable {
     }
 
     .dataTables_paginate .fg-button {
-        border-color: #303030;
-        color: #d0d0d0 !important;
+        border-color: #cdc3b7;
+        background-color: #dcd3c3;
     }
 }
