--- a/app/Resources/public/less/themes/theme-mars.less
+++ b/app/Resources/public/less/themes/theme-mars.less
@@ -1,4 +1,4 @@
-@import "etraxis.less";
+@import "../etraxis.less";
 
 body {
     background-color: #fbfbfb;
@@ -22,7 +22,7 @@ nav {
 }
 
 a {
-    color: #00638f;
+    color: #906060;
 }
 
 /* DataTables */
@@ -36,7 +36,7 @@ table.dataTable {
         }
 
         &.blue {
-            color: #00638f;
+            color: #906060;
         }
 
         &.gray {
@@ -61,6 +61,6 @@ table.dataTable {
 
     .dataTables_paginate .fg-button {
         border-color: #303030;
-        color: #fbfbfb !important;
+        color: #d0d0d0 !important;
     }
 }
