--- a/app/Resources/public/less/themes/theme-azure.less
+++ b/app/Resources/public/less/themes/theme-azure.less
@@ -1,7 +1,7 @@
-@import "etraxis.less";
+@import "../etraxis.less";
 
 body {
-    background-color: #fffcf8;
+    background-color: #fbfbfb;
     color: #212121;
 }
 
@@ -22,7 +22,7 @@ nav {
 }
 
 a {
-    color: #b85700;
+    color: #00638f;
 }
 
 /* DataTables */
@@ -36,7 +36,7 @@ table.dataTable {
         }
 
         &.blue {
-            color: #cb842e;
+            color: #3a8eb7;
         }
 
         &.gray {
@@ -60,7 +60,11 @@ table.dataTable {
     }
 
     .dataTables_paginate .fg-button {
-        border-color: #cdc3b7;
-        background-color: #dcd3c3;
+        border-color: #3a8eb7;
+        opacity: 0.85;
+
+        &.ui-state-disabled {
+            background-color: #fbfbfb;
+        }
     }
 }
