--- a/app/Resources/public/less/themes/theme-emerald.less
+++ b/app/Resources/public/less/themes/theme-emerald.less
@@ -1,4 +1,4 @@
-@import "etraxis.less";
+@import "../etraxis.less";
 
 body {
     background-color: #fbfbfb;
@@ -36,7 +36,7 @@ table.dataTable {
         }
 
         &.blue {
-            color: #3a8eb7;
+            color: #00638f;
         }
 
         &.gray {
@@ -60,11 +60,7 @@ table.dataTable {
     }
 
     .dataTables_paginate .fg-button {
-        border-color: #3a8eb7;
-        opacity: 0.85;
-
-        &.ui-state-disabled {
-            background-color: #fbfbfb;
-        }
+        border-color: #303030;
+        color: #fbfbfb !important;
     }
 }
