--- a/app/Resources/views/admin/projects/view.html.twig
+++ b/app/Resources/views/admin/projects/view.html.twig
@@ -1,5 +1,5 @@
 <div class="tabs" id="tabs-project" data-tab="{{ tab }}">
     <ul>
-        <li><a href="{{ path('admin_tab_project_details', {'id': project.id}) }}">{{ project.name }}</a></li>
+        <li><a href="{{ path('admin_tab_project_details', {'id': project.id}) }}">{{ 'project'|trans }}</a></li>
     </ul>
 </div>
