--- a/app/Resources/views/admin/users/tab_groups.html.twig
+++ b/app/Resources/views/admin/users/tab_groups.html.twig
@@ -47,11 +47,11 @@
 
     $(function() {
 
-        function reloadTab() {
+        var reloadTab = function() {
             var $tabs = $('#tabs-user');
             var current = $tabs.tabs('option', 'active');
             $tabs.tabs('load', current);
-        }
+        };
 
         // "<<" button (add to group).
         $('#btn-add').click(function() {
